<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="intro_title">Autocuarentena Segura</string>
    <string name="dialog_manager_check">ID del Encargado Oficial</string>
    <string name="dialog_pin_manager_info">Info. del Encargado Oficial</string>
    <string name="application">Autocuarentena Segura</string>
    <string name="app_noti_title">Se está ejecutando la aplicación Autocuarentena Segura.</string>
    <string name="self_check_enrollment_title">Registrar / editar persona en cuarentena</string>
    <string name="exit_message">Presione el botón ATRÁZ nuevamente para finalizar la aplicación.</string>
    <string name="permission_title">Conceder permiso </string>
    <string name="permission_message">Presione el botón ACEPTO para otorgar permiso a la aplicación el cambio en el sistema.</string>
    <string name="permission_success">ACEPTO</string>
    <string name="agree_content_questions">Acepto</string>
    <string name="agree_cancel">Si no no acepta, no puede usar los servicios de la aplicación.</string>
    <string name="check">Confirmar</string>
    <string name="info_modify">Registrar / Editar información</string>
    <string name="manager_id_put">Ingrese el ID del Encargado Oficial a cargo de Usted para la gestión de la autocuarentena.</string>
    <string name="close_agree">Cerrar </string>
    <string name="not_check_agree_message">Por favor, necesitamos que Ud. acepte el contenido del consentimiento para la recopilación y uso de información personal.</string>
    <string name="user_certification">Guardar</string>
    <string name="user_certification_success">Autenticación exitosa.</string>
    <string name="diagnosislist_not_message">No hay lista de autodiagnóstico.</string>
    <string name="not_PYRXIA_AT_message">Fiebre</string>
    <string name="not_COUGH_AT_message">Tos</string>
    <string name="not_SORE_THROAT_AT_message">Dolor de garganta</string>
    <string name="not_DYSPNEA_AT_message">Disnea (dificultad para respirar) </string>
    <string name="success_slf_diagnosis_message">Su autodiagnóstico ha sido enviado. </string>
    <string name="network_error_message">Se ha producido un error en el servicio de comunicación. Vuelva a intentar más tarde.</string>
    <string name="not_data_message">La red de comunicación no es fluida. Vuelva a intentar más tarde.</string>
    <string name="fail_data_message">Error al obtener datos. Vuelva a intentar más tarde.</string>
    <string name="not_manager_message">Ingrese ID del Encargado Oficial</string>
    <string name="PIN_NUMBER_MAXSIMUM">Ingrese ID</string>
    <string name="manager_part">Organización</string>
    <string name="manager_name">Nombre</string>
    <string name="manager_phone">No. de Teléfono Móvil</string>
    <string name="manager_house_phone">No. de Teléfono </string>
    <string name="submit">Fin</string>
    <string name="temperature">Fiebre (más de 37.5 ℃) o sensación de calor</string>
    <string name="cough">Tos</string>
    <string name="sore_throat">Dolor de garganta</string>
    <string name="dyspnea">Disnea (dificultad para respirar)</string>
    <string name="yes">Si</string>
    <string name="no">No</string>
    <string name="selfcheck">Iniciar \nAutodiagnóstico</string>
    <string name="selfcheck_title">Iniciar autodiagnóstico</string>
    <string name="selfcheck_submit">¿Desea Enviar?</string>
    <string name="last_selfcheck">Último autodiagnóstico</string>
    <string name="date_ex">Ninguna</string>
    <string name="list">Lista de autodiagnóstico</string>
    <string name="enrollment">Registrar nueva persona en autocuarentena</string>
    <string name="modify">Editar información de la persona en cuarentena</string>
    <string name="user_agree">Consentimiento para la recopilación y uso de información personal e información de ubicación</string>
    <string name="selftcheck_title">Autodiagnóstico</string>
    <string name="selftcheck_list_title">Lista de los resultados de autodiagnóstico</string>
    <string name="today_symptom">Seleccione los síntomas de hoy</string>
    <string name="my_admin">Información de contado del Encargado Oficial</string>
    <string name="man">Masculino</string>
    <string name="woman">Femenino</string>
    <string name="nation_peru">Perú</string>
    <string name="nation_etc">Otros paises</string>
    <string name="location_regist">Editar</string>
    <string name="map_title">Google Map</string>
    <string name="regist">Fin</string>
    <string name="name">Nombre / Fecha de nacimiento</string>
    <string name="birth_ex">Seleccionar fecha de nacimiento</string>
    <string name="name_put">Ingrese su nombre</string>
    <string name="gender">Género</string>
    <string name="national">Nacionalidad</string>
    <string name="gender_national_ex">Seleccionar nacionalidad</string>
    <string name="tel">No. de teléfono móvil</string>
    <string name="pass_port">No. de pasaporte</string>
    <string name="pass_prot_ex">Ej: A11223344</string>
    <string name="write_phone">Ej: 994123456 Ingrese sin "-".</string>
    <string name="emergency_phone">Contacto (tutor)</string>
    <string name="quarantine_addr">Dirección de cuarentena</string>
    <string name="save_location">Registrar</string>
    <string name="add_location">Registrar ubicación</string>
    <string name="check_location">Confirmar dirección de cuarentena</string>
    <string name="select_language">Seleccionar idioma</string>
    <string name="disease_center">107</string>
    <string name="not_name_message">Nombre</string>
    <string name="not_birthday_message">Ingrese fecha de nacimiento</string>
    <string name="not_sex_message">Género</string>
    <string name="not_NLTY_CODE_message">Nacionalidad</string>
    <string name="not_EMER_TEL_message">Contacto (tutor)</string>
    <string name="not_PASSPORT_message">No. de identificación DNI (ó C.I.)   </string>
    <string name="enroll_addr_etc">Dirección detallada</string>
    <string name="screening_clinic">Centros de Salud</string>
    <string name="location_search">¿Desea guardar la ubicación seleccionada?</string>
    <string name="ok">Si</string>
    <string name="cancel">Cancelar</string>
    <string name="exit">No acepto</string>
    <string name="please_wait">Por favor espere. </string>
    <string name="info_save_success">La información ha sido editada.</string>
    <string name="app_permission">Acepte el siguiente permiso en la información de la aplicación.</string>
    <string name="app_permission_close">Por favor, acepte el permiso de uso. La aplicación terminará. </string>
    <string name="diag_etc">Detalles </string>
    <string name="diag_trans_msg">※ Los resultados del autodiagnóstico y los detalles se enviarán al encargado oficial a cargo.</string>
    <string name="temperature_input">Temperatura corporal: </string>
    <string name="region_select">Región</string>
    <string name="provincia_select">Provincia</string>
    <string name="map_select">Seleccionar en mapa</string>
    <string name="addr_input">Ingresar dirección </string>
    <string name="function_select">Función </string>
    <string name="self_isolation">Autodiagnóstico</string>
    <string name="self_escape">Autodiagnóstico / Gestión de abandono</string>
    <string name="region_not_message">Seleccionar Región</string>
    <string name="diag_200">Máx. hasta 200 caracteres</string>
    <string name="distrito_select">Distrito</string>
    <string name="provincia_not_message">Seleccionar Provincia</string>
    <string name="distrito_not_message">Seleccionar Distrito</string>
    <string name="wrong_TEL_message">Número de teléfono móvil es incorrecto. </string>
    <string name="wrong_EMER_TEL_message">Número de teléfono del tutor es incorrecto. </string>
    <string name="not_TEL_message">Por favor ingrese su número de teléfono móvil.</string>
    <string name="select_lang">El idioma elegido es "español".</string>
    <string name="PHONE_NUMBER_MAXSIMUM">Ingrese un número de teléfono exacto de 9 o más dígitos.</string>
    <string name="not_user_telno_message">No se puede obtener el número de teléfono móvil del usuario.\nVerifique su configuración de permisos o comuníquese con el administrador.</string>
    <string name="not_TEMPERATURE_message">Ingresar temperatura corportal. </string>
    <string name="self_contained_location">Ubicación de cuarentena</string>
    <string name="id_text">ID Ciudadano</string>
    <string name="id_hint">Introduzca ID ciudadano.</string>
    <string name="not_last_list_msg">No encontramos su último autodiagnóstico.</string>
    <string name="clinic_lookup">Buscar centro de salud</string>
    <string name="region">Región</string>
    <string name="provincia">Provincia</string>
    <string name="distrito">Distrito</string>
    <string name="please_input_location_xy">Introduzca las coordenadas en el mapa.</string>
    <string name="location_save_success">※ La ubicación se ha guardado.</string>
    <string name="already_location_save">La información de ubicación ya está guardada. ¿Desea editarlo?</string>
    <string name="please_select_a_language">Por favor, seleccione su idioma.</string>
    <string name="PIN_AGREE">Confirmar</string>
    <!--2020/05/15-->
    <string name="location_search_pharmacy">Buscar\nfarmacia</string>


    <string name="publickey_fail">Se produjo un error al recibir la clave. Inténtalo de nuevo.</string>
    <string name="privatekey_fail">La clave ha expirado. Registre la Información de nuevo por favor.</string>
</resources>
