<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/abl_lang"
        style="@style/Toolbar_Title">

        <TextView
            style="@style/Toolbar_TextView"
            android:text="@string/dialog_manager_check" />
    </androidx.appcompat.widget.Toolbar>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:orientation="vertical"
        android:padding="5dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:padding="10dp"
            android:text="@string/manager_id_put"
            android:textColor="@color/colorBlack"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/et_manager_id"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:background="@drawable/manager_value"
            android:gravity="center_vertical"
            android:hint="@string/PIN_NUMBER_MAXSIMUM"
            android:inputType="textPersonName"
            android:paddingStart="10dp"
            android:textColor="#000000" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:gravity="center"
        android:orientation="horizontal">


        <LinearLayout
            android:id="@+id/ll_pin_close"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/bg_button_blue_left"
            android:gravity="center">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/close_agree"
                android:textColor="@color/colorWhite"
                android:textSize="25sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="@color/colorWhite"
            android:gravity="center" />


        <LinearLayout
            android:id="@+id/ll_pin_check"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/bg_button_blue_right"
            android:gravity="center">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/user_certification"
                android:textColor="@color/colorWhite"
                android:textSize="25sp" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>
