<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.MainActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/abl_lang"
        style="@style/Toolbar_Title"
        app:layout_constraintBottom_toTopOf="@+id/tv_main_selfcheck"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            style="@style/Toolbar_TextView"
            android:text="@string/application" />
    </androidx.appcompat.widget.Toolbar>

    <TextView
        android:id="@+id/tv_main_selfcheck"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/check_btn_red"
        android:gravity="center"
        android:paddingTop="50dp"
        android:text="@string/selfcheck"
        android:textColor="@color/colorRed"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/ll_main"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/abl_lang"
        app:layout_constraintVertical_weight="5" />

    <TextView
        android:id="@+id/iv_main_selfcheck"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="40dp"
        android:background="@drawable/ic_user_check_red"
        app:layout_constraintBottom_toBottomOf="@+id/tv_main_selfcheck"
        app:layout_constraintEnd_toEndOf="@+id/tv_main_selfcheck"
        app:layout_constraintStart_toStartOf="@+id/tv_main_selfcheck"
        app:layout_constraintTop_toTopOf="@+id/tv_main_selfcheck" />


    <LinearLayout
        android:id="@+id/ll_main"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@color/colorLightGray"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_main_selfcheck"
        app:layout_constraintVertical_weight="6" />

    <LinearLayout
        android:id="@+id/ll_last_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintVertical_weight="1.5"
        app:layout_constraintStart_toStartOf="@+id/bt_main_info"
        app:layout_constraintEnd_toStartOf="@+id/bt_main_list"
        app:layout_constraintTop_toTopOf="@+id/bt_main_list"
        app:layout_constraintBottom_toBottomOf="@+id/bt_main_list">

        <TextView
            android:id="@+id/tv_main_last"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="bottom"
            android:text="@string/last_selfcheck"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/tv_main_lastTime"
            app:layout_constraintStart_toStartOf="@+id/bt_main_info"
            app:layout_constraintTop_toTopOf="@+id/ll_main"
            app:layout_constraintVertical_weight="1.2" />

        <TextView
            android:id="@+id/tv_main_lastTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="5dp"
            android:text="@string/date_ex"
            android:textSize="17sp"
            app:layout_constraintBottom_toTopOf="@+id/bt_main_info"
            app:layout_constraintEnd_toStartOf="@+id/bt_main_list"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/bt_main_info"
            app:layout_constraintTop_toBottomOf="@+id/tv_main_last"
            app:layout_constraintVertical_weight="1" />
    </LinearLayout>

    <Button
        android:id="@+id/bt_main_list"
        style="@style/Main.Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:maxWidth="190dp"
        android:layout_marginEnd="8dp"
        android:text="@string/list"
        app:layout_constraintBottom_toTopOf="@id/bt_main_info"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintTop_toTopOf="@+id/ll_main"
        app:layout_constraintEnd_toEndOf="parent"/>

    <Button
        android:id="@+id/bt_main_info"
        style="@style/Main.Button"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:drawableStart="@drawable/ic_clipboard"
        android:drawableEnd="@drawable/ic_arrow_right"
        android:text="@string/info_modify"
        app:layout_constraintBottom_toTopOf="@id/bt_main_screening_clinic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/bt_main_list"
        app:layout_constraintVertical_weight="1.5" />

    <Button
        android:id="@+id/bt_main_screening_clinic"
        style="@style/Main.Button"
        android:drawableStart="@drawable/ic_clipboard2"
        android:drawableEnd="@drawable/ic_arrow_right"
        android:text="@string/clinic_lookup"
        app:layout_constraintBottom_toTopOf="@id/bt_main_admin"
        app:layout_constraintEnd_toEndOf="@+id/bt_main_info"
        app:layout_constraintStart_toStartOf="@+id/bt_main_info"
        app:layout_constraintTop_toBottomOf="@id/bt_main_info"
        app:layout_constraintVertical_weight="1.5" />

    <Button
        android:id="@+id/bt_main_admin"
        style="@style/Main.Button"
        android:drawableStart="@drawable/ic_users"
        android:drawableEnd="@drawable/ic_arrow_right"
        android:text="@string/my_admin"
        app:layout_constraintBottom_toTopOf="@+id/bt_main_107"
        app:layout_constraintEnd_toEndOf="@id/bt_main_screening_clinic"
        app:layout_constraintStart_toStartOf="@id/bt_main_screening_clinic"
        app:layout_constraintTop_toBottomOf="@id/bt_main_screening_clinic"
        app:layout_constraintVertical_weight="1.5" />

    <Button
        android:id="@+id/bt_main_107"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="5dp"
        android:background="@drawable/bg_button"
        android:drawableStart="@drawable/ic_phone"
        android:drawableEnd="@drawable/ic_arrow_right_white"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:text="@string/disease_center"
        android:textColor="@color/colorWhite"
        android:textSize="@dimen/default_text_size"
        app:layout_constraintBottom_toTopOf="@id/tv_main_ver"
        app:layout_constraintEnd_toEndOf="@+id/bt_main_admin"
        app:layout_constraintStart_toStartOf="@+id/bt_main_admin"
        app:layout_constraintTop_toBottomOf="@+id/bt_main_admin"
        app:layout_constraintVertical_weight="1.5" />

    <TextView
        android:id="@+id/tv_main_ver"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:gravity="center"
        android:textColor="#50000000"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="@id/ll_main"
        app:layout_constraintEnd_toEndOf="@+id/bt_main_107"
        app:layout_constraintStart_toStartOf="@+id/bt_main_107"
        app:layout_constraintTop_toBottomOf="@+id/bt_main_107" />

</androidx.constraintlayout.widget.ConstraintLayout>